class page overflow fix trial 3

--- a/src/components/pages/Classes/Classes.scss
+++ b/src/components/pages/Classes/Classes.scss
@@ -10,9 +10,10 @@
     box-sizing: border-box;
     
 }
-.heroContainer{
+.Classes{
     overflow-x: hidden;
 }
+
 #hero {
     position: relative;
     width: 100%;
